Fixed bug in OAuth2 login