@@ -18,45 +18,54 @@ import java.util.List;
 @Configuration
 public class SecurityConfig {
 
-        private final CustomOAuth2UserService customOAuth2UserService;
+    private final CustomOAuth2UserService customOAuth2UserService;
 
-        public SecurityConfig(CustomOAuth2UserService customOAuth2UserService) {
-                this.customOAuth2UserService = customOAuth2UserService;
-        }
+    public SecurityConfig(CustomOAuth2UserService customOAuth2UserService) {
+        this.customOAuth2UserService = customOAuth2UserService;
+    }
 
-        @Bean
-        public SecurityFilterChain filterChain(
-                        HttpSecurity http) throws Exception {
-
+    @Bean
+    public SecurityFilterChain filterChain(
+            HttpSecurity http) throws Exception {
                 http
-                                .cors(Customizer.withDefaults())
-                                .csrf(csrf -> csrf.disable())
-                                .exceptionHandling(exception -> exception
-                                                .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)))
-                                .authorizeHttpRequests(auth -> auth
-                                                .requestMatchers("/api/contests/**", "/api/rating/**").permitAll()
-                                                .requestMatchers("/api/preferences/**", "/api/user/**", "/api/recommendation").authenticated()
-                                                .anyRequest().permitAll())
-                                .oauth2Login(oauth2 -> oauth2
-                                                .userInfoEndpoint(userInfo -> userInfo
-                                                                .userService(customOAuth2UserService))
-                                                .defaultSuccessUrl("http://localhost:5173", true));
+                // enable CORS with default configuration
+                .cors(Customizer.withDefaults())
+                // disable CSRF
+                .csrf(csrf -> csrf.disable())
+                // Handle unauthorized requests
+                .exceptionHandling(exception -> exception
+                        .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/api/contests/**").permitAll()
+                        .requestMatchers("/api/preferences/**", "/api/user/**", "/api/rating/**", "/api/recommendation").authenticated()
+                        .anyRequest().permitAll())
+                // OAuth2 login configuration with Google
+                .oauth2Login(oauth2 -> oauth2
+                        .userInfoEndpoint(userInfo -> userInfo
+                                .userService(customOAuth2UserService))
+                        .defaultSuccessUrl("http://localhost:5173", true)
+                        .failureUrl("http://localhost:5173/login?error=true"))
+                // Logout configuration
+                .logout(logout -> logout
+                        .logoutSuccessUrl("http://localhost:5173")
+                        .invalidateHttpSession(true)
+                        .deleteCookies("JSESSIONID"));
 
-                return http.build();
-        }
+        return http.build();
+    }
 
-        @Bean
-        public CorsConfigurationSource corsConfigurationSource() {
-                CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-                configuration.setExposedHeaders(List.of("Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
-                configuration.setAllowCredentials(true);
-                configuration.setMaxAge(3600L);
-                
-                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration);
-                return source;
-        }
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+        configuration.setExposedHeaders(List.of("Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 }
